# aseq-python-examples

./: .gitignore
applications/examples/example_app_py_mt_core/: main.py
libspectrometer/: .gitignore  meson.build
libspectrometer/include/: hidapi.h  internal.h  libspectrometer.h
libspectrometer/src/: internal.c  libspectrometer.c
pyspectrometer/: .gitignore  README.md  setup.cfg
pyspectrometer/src/aseq/: __init__.py  flash.py  lib.py  memory.py  modes.py  spectrometer.py  triggers.py
