[metadata]
name = aseq
version = 0.5.1
description = Library for spectrometers with 16-bit A/D resolution from ASEQ Instrument
author = Abdelhakim Qbaich
author_email = aqbaich@uvic.ca
url = https://git.substance.uvic.ca/kiosk/pyspectrometer
project_urls =
    Bug Tracker = https://git.substance.uvic.ca/kiosk/pyspectrometer/issues
    Source Code = https://git.substance.uvic.ca/kiosk/pyspectrometer
keywords = spectrometer, spectroscopy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = src
